association des catégories aux taches; si liste de taches trop longue --> scroll; message d'erreur dans le coin sup droit; amélioration du design (80%)

--- a/krassa.css
+++ b/krassa.css
@@ -332,7 +332,7 @@ ul li span {
     height: 40px;
     font-size: 22px;
     color: #555;
-    /*controle l'interligne (hauteur de ligne)*/
+    /*controle l'interligne (hauteur de ligne) hhahaha*/
     line-height: 40px;
     text-align: center;
     /*le background de '×' est circulaire*/
